# prestaly

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/core/: config.py
api/app/db/: session.py
