[project]
name = "prestaly-api"
version = "0.0.1"
description = "Prestaly backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "alembic>=1.13",
]

[tool.uvicorn]
factory = false